<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_registros_02">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:focusableInTouchMode="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/xxxlarge_text"
                android:text="Obtener una cuenta"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:hint="@string/first_name"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/last_name"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="@color/white"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/password"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:padding="10dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:textColorHint="@color/white"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password_second"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/password"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        android:padding="10dp" />
                </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/btn_man"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/radio_button_group"
                    android:button="@null"
                    android:text="@string/male" />
                <RadioButton
                    android:id="@+id/btn_woman"
                    android:layout_marginLeft="20dp"
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/radio_button_group"
                    android:button="@null"
                    android:text="@string/female"/>
            </RadioGroup>

            <Button
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_square_border"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/conditions"/>


            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_terminos"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    fontPath="fonts/Gotham-Medium.otf"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:text="Términos y condiciones"/>
                <TextView
                    android:id="@+id/tv_politicas"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    fontPath="fonts/Gotham-Medium.otf"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"
                    android:text="Política de privacidad"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
