<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/back_login" />

    <FrameLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:padding="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logotipo_cocos_03" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_usuario_01" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="13sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_contrasena_01" />


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="13sp" />


                </LinearLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_square_border"
                    android:text="Ingresar"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/et_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:text="¿Obtener una cuenta? "
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_forgot_pass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/tv_begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/begin"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/white" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_facebook"
                        android:paddingStart="10dp"
                        android:text="Facebook"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/google_button"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_google"
                        android:padding="10dp"
                        android:text="Gmail"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/tv_invited"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_square_border"
                    android:text="@string/invited"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/white"
                    android:text="Al ingresar con Facebook o Gmail estás aceptando los Términos y condiciones de Cocos"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</RelativeLayout>